--- a/Pokemon/Pokemon/Views/Shared/_Layout.cshtml
+++ b/Pokemon/Pokemon/Views/Shared/_Layout.cshtml
@@ -2,17 +2,38 @@
 <html lang="en">
 <head>
     <title>@ViewData["Title"]</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+
 </head>
 <body>
-<nav class="bg-dark text-white p-2">
-    <nav class="container-fluid">
-        <div class="row">
-            <div class="col navbar-brand h1">Pokemon</div>
-            <div class="col-6 text-end">Hola</div>
+
+<header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="container">
+            <a class="navbar-brand" asp-controller="Home">Pokedex</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-controller="Home">Home</a>
+                    </li>
+                    @* <li class="nav-item"> *@
+                    @*     <a class="nav-link text-dark" asp-page="/Index">Privacysss</a> *@
+                    @* </li> *@
+                    <li>
+                        <a class="nav-link text-dark" asp-controller="Pokemon">Pokemon</a>
+                    </li>
+                        <a class="nav-link text-dark" asp-controller="Berries">Berries</a>
+                        <a  class="nav-link text-dark" asp-controller="Locations">Locations</a>
+                </ul>
+            </div>
         </div>
     </nav>
-</nav>
+</header>
 
 @RenderBody()
 
