--- a/Pokemon/Pokemon/Views/_ViewImports.cshtml
+++ b/Pokemon/Pokemon/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Pokemon.Components
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
