--- a/Pokemon/Pokemon/Pages/Index.cshtml
+++ b/Pokemon/Pokemon/Pages/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@page "razor-index"
+﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Pokemon";
 }
 
 <div class="text-center">
