--- a/Pokemon/Pokemon/Pages/_ViewImports.cshtml
+++ b/Pokemon/Pokemon/Pages/_ViewImports.cshtml
@@ -1,3 +1,6 @@
-﻿@using Pokemon
-@namespace Pokemon.Pages
+﻿@namespace Pokemon.Pages
+@using Pokemon
+@using Microsoft.AspNetCore.Mvc.RazorPages
+@using Pokemon.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Microsft.AspNetCore.Mvc.TagHelpers
