--- a/Pokemon/Pokemon/Pages/Pokemon.cshtml
+++ b/Pokemon/Pokemon/Pages/Pokemon.cshtml
@@ -1,42 +1,57 @@
-﻿@page "/{id:int?}"
+﻿@page "/{id:int?}/{handler?}"
 @model PokemonModel
 @{
     ViewData["Title"] = "Pokemon";
 }
 
 <h1>Pokemons</h1>
-<p>Total Pages: @Model.TotalPages</p>
+<div class="container-fluid row row-cols-2 m-2">
+    <span class="col-2">Total Pages: @Model.TotalPages</span>
+
+</div>
 <div>
     <ul class="list-group">
         @foreach (var pokemonData in Model.PokemonViewModel?.Pokemon ?? Enumerable.Empty<PokemonData>())
         {
             <li class="list-group-item container-fluid row">
-                <span class="col-1">#@pokemonData.Id</span>
-                <img class="col-1" src="@pokemonData.OfficialArt" alt="@pokemonData.Name official artwork"/>
-                <span class="col">@pokemonData.Name.ToUpper()</span>
+                <a asp-page="/PokemonInfo" asp-route-name="@pokemonData.Name" class="text-decoration-none text-black">
+                    <span class="col-1">#@pokemonData.Id</span>
+                    <img class="col-1" src="@pokemonData.OfficialArt" alt="@pokemonData.Name official artwork"/>
+                    <span class="col">@pokemonData.Name.ToUpper()</span>
+                </a>
             </li>
         }
     </ul>
 </div>
 
 <div class="mt-2">
-    <nav>
-        <ul class="pagination">
+    <nav class="container-fluid row row-cols-2">
+        <ul class="col-auto pagination">
             <li class="page-item @(Model.CurrentPage == 0 ? "disabled" : "")">
-                <a href="@(Model.GetPageUrl(Model.CurrentPage - 1))" class="page-link"> Previous</a>
+                <a href="@(Model.GetPageUrl(-1))" class="page-link"> Previous</a>
             </li>
             <li class="page-item @(Model.IsPageSelected(0) ? "active" : "")">
-                <a href="@(Model.GetPageUrl(Model.CurrentPage - 1))" class="page-link">@Model.GetPageNumber(-1)</a>
+                <a href="@(Model.GetPageUrl(-1))" class="page-link">@Model.GetPageNumber(-1)</a>
             </li>
             <li class="page-item @(Model.IsPageSelected(1) ? "active" : "")">
-                <a href="@(Model.GetPageUrl(Model.CurrentPage))" class="page-link">@Model.GetPageNumber(0)</a>
+                <a href="@(Model.GetPageUrl(0))" class="page-link">@Model.GetPageNumber(0)</a>
             </li>
             <li class="page-item @(Model.IsPageSelected(2) ? "active" : "")">
-                <a href="@(Model.GetPageUrl(Model.CurrentPage + 1))" class="page-link">@Model.GetPageNumber(1)</a>
+                <a href="@(Model.GetPageUrl(1))" class="page-link">@Model.GetPageNumber(1)</a>
             </li>
             <li class="page-item @(Model.IsPageSelected(2) ? "disabled" : "")">
-                <a href="@(Model.GetPageUrl(Model.CurrentPage + 1))" class="page-link">Next</a>
+                <a href="@(Model.GetPageUrl(1))" class="page-link">Next</a>
             </li>
         </ul>
+        @* <div class="col"> *@
+        @*     <form method="get" class="input-group container-fluid row" asp-page-handler="Search" asp-page="Pokemon"> *@
+        @*         <div class="col-auto"> *@
+        @*             <input class="form-control" type="number" value="@(Model.Id + 1)" min="0" max="@Model._total" step="1" asp-for="Id" /> *@
+        @*         </div> *@
+        @*         <div class="col-auto"> *@
+        @*             <button class="col btn btn-primary" type="submit">Search</button> *@
+        @*         </div> *@
+        @*     </form> *@
+        @* </div> *@
     </nav>
 </div>
