--- a/Pokemon/Pokemon/Pages/Shared/_Layout.cshtml
+++ b/Pokemon/Pokemon/Pages/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - Pokemon</title>
     @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
-    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/Pokemon.styles.css" asp-append-version="true"/>
 </head>
@@ -32,7 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Locations">Locations</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-page="PokemonInfo">PokemonInfo</a>
+                    </li>
                 </ul>
             </div>
         </div>
