--- a/Pokemon/Pokemon/Pages/PokemonInfo.cshtml
+++ b/Pokemon/Pokemon/Pages/PokemonInfo.cshtml
@@ -1,15 +1,44 @@
-﻿@page "/Pokemon"
+﻿@page "/Pokemon/{name}"
 @model PokemonInfoModel
 
 
-<div class="container">
-    <div class="row row-cols-1">
+<div class="container-fluid">
+    <div class="row row-cols-2">
         <div class="col-3">
-            <img src="@Model.Data?.OfficialArt" alt="@(Model.Data?.Name) official-artwork"/>
+            <img src="@Model.Data?.OfficialArt" alt="@(Model.Data?.Name) official-artwork" class="img-fluid"/>
         </div>
 
-        <div class="col">
-            Data
+        <div class="col container-fluid">
+            <table class="table table-bordered table-striped">
+                <thead>
+                <tr>
+                    <th colspan="3" class="text-center">@Model.Data?.Name.ToUpper()</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                <tr>
+                    <th>Podekex Id</th>
+                    <td>@Model.Data?.Id</td>
+                </tr>
+                <tr>
+                    <th>HP</th>
+                    <td>@Model.Data?.Hp</td>
+                </tr>
+                <tr>
+                    <th>Attack</th>
+                    <td>@Model.Data?.Attack</td>
+                </tr>
+                <tr>
+                    <th>Defense</th>
+                    <td>@Model.Data?.Defense</td>
+                </tr>
+                <tr>
+                    <th>Speed</th>
+                    <td>@Model.Data?.Speed</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
