Created Locations Layout

--- a/Pokemon/Pokemon/Pages/_ViewImports.cshtml
+++ b/Pokemon/Pokemon/Pages/_ViewImports.cshtml
@@ -1,6 +1,8 @@
 ﻿@namespace Pokemon.Pages
 @using Pokemon
+@using Pokemon.Components
 @using Microsoft.AspNetCore.Mvc.RazorPages
 @using Pokemon.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Pokemon
