Modified route to use RouteData.Values

--- a/Pokemon/Pokemon/Pages/Locations.cshtml
+++ b/Pokemon/Pokemon/Pages/Locations.cshtml
@@ -1,5 +1,9 @@
-﻿@page
+﻿@page "{region?}"
 @model LocationsModel
 @{
     ViewData["Title"] = "Locations";
+    Layout = "Shared/_LocationLayout";
 }
+
+
+<h1>dsdsds</h1>
