--- a/Pokemon/Pokemon/Pages/Locations.cshtml
+++ b/Pokemon/Pokemon/Pages/Locations.cshtml
@@ -16,3 +16,30 @@
         <li class="list-group-item">@string.Join(" ", location.Split('-'))</li>
     }
 </ul>
+
+<nav>
+    <ul class="pagination">
+        <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")">
+            <a class="page-link" asp-route-page="@(Model.CurrentPage > 1 ? Model.CurrentPage - 1 : "")" aria-label="previous">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+            </a>
+        </li>
+        @for (int i = Model.CurrentPage - 1; i <= Model.CurrentPage + 1; i++)
+        {
+            if (i > 0 && i <= Model.TotalPages)
+            {
+                <li class="page-item @(Model.CurrentPage == i ? "active" : "")">
+                    <a class="page-link" asp-route-pageNumber="@i">@i</a>
+                </li>
+            }
+        }
+    
+        <li class="page-item @(Model.CurrentPage == Model.TotalPages ? "disabled" : "")">
+            <a class="page-link" asp-route-pageNumber="@(Model.CurrentPage < Model.TotalPages ? Model.CurrentPage + 1 : "")" aria-label="next">
+                <span class="sr-only">Next</span>
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+    </ul>
+</nav>
