--- a/Pokemon/Pokemon/Pages/Locations.cshtml
+++ b/Pokemon/Pokemon/Pages/Locations.cshtml
@@ -11,32 +11,52 @@
 }
 
 <ul class="list-group">
-    @foreach (var location in Model.Locations)
+    @if (Model.Locations.Any())
     {
-        <li class="list-group-item">@string.Join(" ", location.Split('-'))</li>
+        @foreach (var location in Model.Locations)
+        {
+            <li class="list-group-item">@string.Join(" ", location.Split('-'))</li>
+        }
+    }
+    else
+    {
+        <h2>There is nothing here. Weird, right?</h2>
+        <p class="h4">Check the api to see for your self <a class="link-info" href="https://pokeapi.co/api/v2/region/@Model.LocationsViewModel.Region.ToLower()">Here</a></p>
     }
 </ul>
 
 <nav>
     <ul class="pagination">
         <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")">
-            <a class="page-link" asp-route-page="@(Model.CurrentPage > 1 ? Model.CurrentPage - 1 : "")" aria-label="previous">
+            <a class="page-link" aria-label="previous"
+               asp-route-currentPage="@Model.CurrentPage"
+               asp-route-size="@Model.ItemsPerPage"
+               asp-page-handler="Previous">
                 <span aria-hidden="true">&laquo;</span>
                 <span class="sr-only">Previous</span>
             </a>
         </li>
-        @for (int i = Model.CurrentPage - 1; i <= Model.CurrentPage + 1; i++)
+
+        @for (int i = Model.CurrentPage - 2; i <= Model.CurrentPage + 2; i++)
         {
             if (i > 0 && i <= Model.TotalPages)
             {
                 <li class="page-item @(Model.CurrentPage == i ? "active" : "")">
-                    <a class="page-link" asp-route-pageNumber="@i">@i</a>
+                    <a class="page-link"
+                       asp-route-pageNumber="@i"
+                       asp-route-size="@Model.ItemsPerPage"
+                       asp-page-handler="Page">
+                        @i
+                    </a>
                 </li>
             }
         }
-    
+
         <li class="page-item @(Model.CurrentPage == Model.TotalPages ? "disabled" : "")">
-            <a class="page-link" asp-route-pageNumber="@(Model.CurrentPage < Model.TotalPages ? Model.CurrentPage + 1 : "")" aria-label="next">
+            <a class="page-link" aria-label="next"
+               asp-page-handler="Next"
+               asp-route-currentPage="@Model.CurrentPage"
+               asp-route-size="@Model.ItemsPerPage">
                 <span class="sr-only">Next</span>
                 <span aria-hidden="true">&raquo;</span>
             </a>
