--- a/Pokemon/Pokemon/Pages/Shared/_Layout.cshtml
+++ b/Pokemon/Pokemon/Pages/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/Berries">Berries</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Locations">Locations</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Locations" asp-route-region="">Locations</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-page="PokemonInfo">PokemonInfo</a>
